--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>NCC Alumni Globe</title>
-  <script src="https://cesium.com/downloads/cesiumjs/releases/latest/Build/Cesium/Cesium.js"></script>
   <link href="https://cesium.com/downloads/cesiumjs/releases/latest/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <script src="https://cesium.com/downloads/cesiumjs/releases/latest/Build/Cesium/Cesium.js"></script>
   <style>
     html, body, #cesiumContainer {
       width: 100%;
@@ -19,7 +19,6 @@
 <body>
   <div id="cesiumContainer"></div>
   <script>
-    // Initialize Cesium viewer
     const viewer = new Cesium.Viewer('cesiumContainer', {
       terrainProvider: Cesium.createWorldTerrain(),
       animation: false,
@@ -27,47 +26,18 @@
       baseLayerPicker: false
     });
 
-    // Sample alumni data
     const alumni = [
-      {
-        name: "Sarah Thompson",
-        year: "2015",
-        location: "London, UK",
-        lat: 51.5074,
-        lon: -0.1278
-      },
-      {
-        name: "James Lee",
-        year: "2018",
-        location: "Toronto, Canada",
-        lat: 43.65107,
-        lon: -79.347015
-      },
-      {
-        name: "Emily Zhang",
-        year: "2020",
-        location: "Sydney, Australia",
-        lat: -33.8688,
-        lon: 151.2093
-      }
+      { name: "Sarah Thompson", year: "2015", location: "London, UK", lat: 51.5074, lon: -0.1278 },
+      { name: "James Lee", year: "2018", location: "Toronto, Canada", lat: 43.65107, lon: -79.347015 },
+      { name: "Emily Zhang", year: "2020", location: "Sydney, Australia", lat: -33.8688, lon: 151.2093 }
     ];
 
-    // Add pins to the globe
     alumni.forEach(alum => {
       viewer.entities.add({
         name: alum.name,
         position: Cesium.Cartesian3.fromDegrees(alum.lon, alum.lat),
-        point: {
-          pixelSize: 10,
-          color: Cesium.Color.CYAN,
-          outlineColor: Cesium.Color.WHITE,
-          outlineWidth: 2
-        },
-        description: `
-          <strong>${alum.name}</strong><br>
-          Class of ${alum.year}<br>
-          Location: ${alum.location}
-        `
+        point: { pixelSize: 10, color: Cesium.Color.CYAN, outlineColor: Cesium.Color.WHITE, outlineWidth: 2 },
+        description: `<strong>${alum.name}</strong><br>Class of ${alum.year}<br>${alum.location}`
       });
     });
 
