--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title>NCC Alumni Map</title>
 
   <!-- Leaflet CSS -->
-  https://unpkg.com/leaflet/dist/leaflet.css
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
   <!-- Leaflet JS -->
-  https://unpkg.com/leaflet/dist/leaflet.js</script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <style>
     html, body {
