--- a/index.html
+++ b/index.html
@@ -1,51 +1,65 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NCC Alumni Map</title>
+  <title>NCC Alumni Globe</title>
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <!-- CesiumJS CSS -->
+  <link rel="stylesheet" href="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Widgets/widgets.css" />
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- CesiumJS JavaScript -->
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Cesium.js"></script>
 
   <style>
-    html, body {
+    html, body, #cesiumContainer {
+      width: 100%;
+      height: 100%;
       margin: 0;
       padding: 0;
-      height: 100%;
+      overflow: hidden;
+      font-family: sans-serif;
     }
-    #map {
-      width: 100%;
-      height: 100vh;
+    .cesium-infoBox {
+      max-width: 300px;
     }
   </style>
 </head>
 <body>
-  <div id="map"></div>
+  <div id="cesiumContainer"></div>
 
   <script>
-    // Initialize map
-    const map = L.map('map').setView([-26.6267, 153.0260], 2); // Centered near Nambour
-
-    // Add OpenStreetMap tiles
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
+    // Initialize Cesium viewer
+    const viewer = new Cesium.Viewer('cesiumContainer', {
+      terrainProvider: Cesium.createWorldTerrain(),
+      infoBox: true,
+      selectionIndicator: true
+    });
 
     // Sample alumni data
     const alumniData = [
-      { name: "John Smith", lat: -26.6267, lon: 153.0260, details: "Graduated 2020, working in Brisbane" },
-      { name: "Emily Tan", lat: 51.5074, lon: -0.1276, details: "Graduated 2018, studying at UCL" },
-      { name: "Carlos Rivera", lat: 19.4326, lon: -99.1332, details: "Graduated 2015, working in education" }
+      { name: "John Smith", location: { lon: 153.0260, lat: -26.6267 }, details: "Graduated 2020, working in Brisbane" },
+      { name: "Emily Tan", location: { lon: -0.1276, lat: 51.5074 }, details: "Graduated 2018, studying at UCL" },
+      { name: "Carlos Rivera", location: { lon: -99.1332, lat: 19.4326 }, details: "Graduated 2015, working in education" }
     ];
 
-    // Add markers
+    // Add pins to the globe
     alumniData.forEach(alum => {
-      L.marker([alum.lat, alum.lon]).addTo(map)
-        .bindPopup(`<strong>${alum.name}</strong><br>${alum.details}`);
+      viewer.entities.add({
+        position: Cesium.Cartesian3.fromDegrees(alum.location.lon, alum.location.lat),
+        point: {
+          pixelSize: 10,
+          color: Cesium.Color.RED,
+          outlineColor: Cesium.Color.WHITE,
+          outlineWidth: 2
+        },
+        name: alum.name,
+        description: `<strong>${alum.name}</strong><br>${alum.details}`
+      });
     });
+
+    // Zoom to all entities
+    viewer.zoomTo(viewer.entities);
   </script>
 </body>
 </html>
